Fix Bug 279325 - access to kwallet is not closed after closing kmail

FIXED-IN: 4.10.2
BUG: 279325